k8s/isucon-o11y/loki.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: isucon-o11y-loki
spec:
  selector:
    matchLabels:
      app: isucon-o11y-loki
  serviceName: isucon-o11y-loki
  replicas: 1
  template:
    metadata:
      labels:
        app: isucon-o11y-loki
    spec:
      securityContext:
        fsGroup: 10001
        runAsUser: 10001
        runAsNonRoot: true
      containers:
      - name: isucon-o11y-loki
        image: grafana/loki:3.7.8
        args:
        - -config.file=/etc/loki/config.yaml
        ports:
        - containerPort: 3100
          name: http
        volumeMounts:
        - name: data
          mountPath: /loki
        - name: config
          mountPath: /etc/loki
      volumes:
      - name: config
        configMap:
          name: isucon-o11y-loki
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: isucon-o11y-loki
spec:
  selector:
    app: isucon-o11y-loki
  ports:
  - port: 3100
    targetPort: 3100
