k8s/isucon-o11y/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: isucon-o11y-prometheus
spec:
  selector:
    matchLabels:
      app: isucon-o11y-prometheus
  serviceName: isucon-o11y-prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: isucon-o11y-prometheus
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: isucon-o11y-prometheus
        image: prom/prometheus:v3.15.0
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention.time=30d
        - --web.enable-remote-write-receiver
        - --enable-feature=exemplar-storage
        ports:
        - containerPort: 9090
          name: http
        volumeMounts:
        - name: data
          mountPath: /prometheus
        - name: config
          mountPath: /etc/prometheus
      volumes:
      - name: config
        configMap:
          name: isucon-o11y-prometheus
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: isucon-o11y-prometheus
spec:
  selector:
    app: isucon-o11y-prometheus
  ports:
  - port: 9090
    targetPort: 9090
