k8s/isucon-o11y/pyroscope.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: isucon-o11y-pyroscope
spec:
  selector:
    matchLabels:
      app: isucon-o11y-pyroscope
  serviceName: isucon-o11y-pyroscope
  replicas: 1
  template:
    metadata:
      labels:
        app: isucon-o11y-pyroscope
    spec:
      securityContext:
        fsGroup: 10001
        runAsUser: 10001
        runAsNonRoot: true
      containers:
      - name: isucon-o11y-pyroscope
        image: grafana/pyroscope:2.3.1
        args:
        - -config.file=/etc/pyroscope/config.yaml
        ports:
        - containerPort: 4040
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /etc/pyroscope
      volumes:
      - name: config
        configMap:
          name: isucon-o11y-pyroscope
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: synology-csi-driver-nfs-retain
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: isucon-o11y-pyroscope
spec:
  selector:
    app: isucon-o11y-pyroscope
  ports:
  - port: 4040
    targetPort: 4040
