k8s/isucon-o11y/tempo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: isucon-o11y-tempo
spec:
  selector:
    matchLabels:
      app: isucon-o11y-tempo
  serviceName: isucon-o11y-tempo
  replicas: 1
  template:
    metadata:
      labels:
        app: isucon-o11y-tempo
    spec:
      securityContext:
        fsGroup: 10001
        runAsUser: 10001
        runAsNonRoot: true
      containers:
      - name: isucon-o11y-tempo
        image: grafana/tempo:3.1.0
        args:
        - -target=all
        - -config.file=/etc/tempo/tempo.yaml
        ports:
        - containerPort: 3200
          name: http
        - containerPort: 4317
          name: otlp-grpc
        - containerPort: 4318
          name: otlp-http
        volumeMounts:
        - name: data
          mountPath: /var/tempo
        - name: config
          mountPath: /etc/tempo
      volumes:
      - name: config
        configMap:
          name: isucon-o11y-tempo
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: isucon-o11y-tempo
spec:
  selector:
    app: isucon-o11y-tempo
  ports:
  - name: http
    port: 3200
    targetPort: 3200
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
