k8s/isucon-o11y/grafana.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: isucon-o11y-grafana
spec:
  selector:
    matchLabels:
      app: isucon-o11y-grafana
  serviceName: isucon-o11y-grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: isucon-o11y-grafana
    spec:
      securityContext:
        fsGroup: 472
        runAsUser: 472
        runAsNonRoot: true
      containers:
      - name: isucon-o11y-grafana
        image: grafana/grafana:13.2.3
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources
      volumes:
      - name: datasources
        configMap:
          name: isucon-o11y-grafana-datasources
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: isucon-o11y-grafana
spec:
  selector:
    app: isucon-o11y-grafana
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isucon-o11y-grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: isucon-grafana.lapi.tokyo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: isucon-o11y-grafana
            port:
              number: 3000
  tls:
  - hosts:
    - isucon-grafana.lapi.tokyo
    secretName: isucon-o11y-grafana-tls
